--- a/utils/bazel/llvm-project-overlay/mlir/BUILD.bazel
+++ b/utils/bazel/llvm-project-overlay/mlir/BUILD.bazel
@@ -11035,6 +11035,7 @@ cc_library(
         ":LLVMCommonConversion",
         ":LLVMDialect",
         ":LoopLikeInterface",
+        ":Parser",
         ":Pass",
         ":Rewrite",
         ":SideEffectInterfaces",
