--- a/mlir/include/mlir/Dialect/CMakeLists.txt
+++ b/mlir/include/mlir/Dialect/CMakeLists.txt
@@ -36,6 +36,7 @@ add_subdirectory(Tensor)
 add_subdirectory(Tosa)
 add_subdirectory(Transform)
 add_subdirectory(UB)
+add_subdirectory(URI)
 add_subdirectory(Utils)
 add_subdirectory(Vector)
 add_subdirectory(X86Vector)
